# coinext

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.obs.yml  docker-compose.yml  justfile  pyproject.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: backtest.yaml  base.yaml  live.yaml  sandbox.yaml
crates/coinext-adapters/: README.md
crates/coinext-adapters/binance/: Cargo.toml
crates/coinext-bus/: Cargo.toml
crates/coinext-bus/src/: lib.rs
crates/coinext-cache/: Cargo.toml
crates/coinext-cache/src/: lib.rs
crates/coinext-core/: Cargo.toml
crates/coinext-core/src/: error.rs  lib.rs  time.rs  value.rs
crates/coinext-data-engine/: Cargo.toml
crates/coinext-data-engine/src/: lib.rs
crates/coinext-derivatives/: Cargo.toml
crates/coinext-derivatives/src/: lib.rs
crates/coinext-exec-engine/: Cargo.toml
crates/coinext-exec-engine/src/: lib.rs
crates/coinext-exec-svc/: Cargo.toml
crates/coinext-exec-svc/src/: main.rs
crates/coinext-indicators/: Cargo.toml
crates/coinext-indicators/src/: lib.rs
crates/coinext-ingest/: Cargo.toml
crates/coinext-ingest/src/: main.rs
crates/coinext-kernel/: Cargo.toml
crates/coinext-kernel/src/: lib.rs
crates/coinext-model/: Cargo.toml
crates/coinext-model/src/: account.rs  enums.rs  fill.rs  instrument.rs  lib.rs  market_data.rs  order.rs  order_book.rs  position.rs
crates/coinext-network/: Cargo.toml
crates/coinext-network/src/: error.rs  lib.rs  ratelimit.rs  rest.rs  sign.rs  ws.rs
crates/coinext-persistence/: Cargo.toml
crates/coinext-persistence/src/: cursor.rs  error.rs  event_store.rs  lib.rs  parquet.rs
crates/coinext-portfolio/: Cargo.toml
crates/coinext-portfolio/src/: lib.rs
crates/coinext-ports/: Cargo.toml
crates/coinext-ports/src/: bus.rs  commands.rs  context.rs  error.rs  lib.rs  traits.rs
crates/coinext-py/: Cargo.toml  pyproject.toml
crates/coinext-py/src/: lib.rs
crates/coinext-risk-engine/: Cargo.toml
crates/coinext-risk-engine/src/: lib.rs
crates/coinext-sim/: Cargo.toml
crates/coinext-sim/src/: brokerage.rs  lib.rs
crates/coinext-testkit/: Cargo.toml
crates/coinext-testkit/src/: lib.rs
crates/qv-adapters/: README.md
crates/qv-adapters/binance/: Cargo.toml
crates/qv-bus/: Cargo.toml
crates/qv-bus/src/: lib.rs
crates/qv-cache/: Cargo.toml
crates/qv-cache/src/: lib.rs
crates/qv-core/: Cargo.toml
crates/qv-data-engine/: Cargo.toml
crates/qv-data-engine/src/: lib.rs
crates/qv-derivatives/: Cargo.toml
crates/qv-exec-engine/: Cargo.toml
crates/qv-exec-engine/src/: lib.rs
crates/qv-exec-svc/: Cargo.toml
crates/qv-exec-svc/src/: main.rs
crates/qv-indicators/: Cargo.toml
crates/qv-ingest/: Cargo.toml
crates/qv-kernel/: Cargo.toml
crates/qv-kernel/src/: lib.rs
crates/qv-model/: Cargo.toml
crates/qv-model/src/: account.rs  enums.rs  fill.rs  identifiers.rs  instrument.rs  lib.rs  market_data.rs  order.rs  position.rs
crates/qv-network/: Cargo.toml
crates/qv-persistence/: Cargo.toml
crates/qv-portfolio/: Cargo.toml
crates/qv-portfolio/src/: lib.rs
crates/qv-ports/: Cargo.toml
crates/qv-ports/src/: bus.rs  commands.rs  context.rs  error.rs  lib.rs  traits.rs
crates/qv-py/: Cargo.toml  pyproject.toml
crates/qv-py/src/: lib.rs
crates/qv-risk-engine/: Cargo.toml
crates/qv-sim/: Cargo.toml
crates/qv-testkit/: Cargo.toml
data/: .gitkeep
data/sample/: README.md
deploy/: README.md  otel-collector-config.yaml
deploy/docker/: api.Dockerfile  exec-svc.Dockerfile  ingestor.Dockerfile  risk-monitor.Dockerfile  trader.Dockerfile  ui.Dockerfile
deploy/loki/: loki-config.yml
deploy/prometheus/: prometheus.yml
deploy/tempo/: tempo-config.yml
docs/: ARCHITECTURE.md  ROADMAP.md  TESTNET.md
examples/backtest-sma/: Cargo.toml
notebooks/: README.md  quickstart.py  research_loop.py
python/coinext_analytics/: __init__.py  bias.py  plots.py  trades.py
python/coinext_backtest/: __init__.py
python/coinext_bus/: __init__.py
python/coinext_cli/: __init__.py  main.py
python/coinext_config/: __init__.py
python/coinext_contracts/: __init__.py
python/coinext_data/: __init__.py  download.py  lake.py
python/coinext_derivatives/: __init__.py
python/coinext_indicators/: __init__.py
python/coinext_kernel/: __init__.py
python/coinext_live/: __init__.py
python/coinext_optimize/: __init__.py
python/coinext_parity/: __init__.py
python/coinext_portfolio/: __init__.py
python/coinext_risk/: __init__.py
python/coinext_screen/: __init__.py
python/coinext_strategy/: __init__.py
python/qv_analytics/: __init__.py  bias.py  plots.py  trades.py
python/qv_backtest/: __init__.py
python/qv_bus/: __init__.py
python/qv_cli/: __init__.py  main.py
python/qv_config/: __init__.py
python/qv_contracts/: __init__.py
python/qv_data/: __init__.py  download.py  lake.py
python/qv_derivatives/: __init__.py
python/qv_indicators/: __init__.py
python/qv_kernel/: __init__.py
python/qv_live/: __init__.py
python/qv_optimize/: __init__.py
python/qv_parity/: __init__.py
python/qv_portfolio/: __init__.py
python/qv_risk/: __init__.py
python/qv_screen/: __init__.py
python/qv_strategy/: __init__.py
services/: README.md
services/api/: README.md  app.py  requirements.txt
services/ingestor/: README.md
services/risk-monitor/: README.md  main.py  requirements.txt
services/trader/: README.md  main.py  requirements.txt
services/ui/: .gitignore  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
tests/: test_analytics.py  test_api_auth.py  test_control_plane.py  test_data_lake.py  test_derivatives.py  test_indicators.py  test_margin.py  test_multi_instrument.py  test_notebook.py  test_on_book.py  test_optimize.py  test_pricing.py  test_python_backtest.py  test_quote_trade_feed.py  test_screen.py  test_strategy_events.py
tests/parity/: README.md  test_parity_gate.py
tests/regression/: regression_golden.json  test_regression_placeholder.py
(+46 files in other folders)
