# Coinext — Rust workspace (the hot path + shared domain, the source of truth).
# Python mirrors this domain via PyO3 (see crates/coinext-py and python/).
[workspace]
resolver = "2"
members = [
    "crates/coinext-core",
    "crates/coinext-model",
    "crates/coinext-ports",
    "crates/coinext-cache",
    "crates/coinext-bus",
    "crates/coinext-indicators",
    "crates/coinext-derivatives",
    "crates/coinext-risk-engine",
    "crates/coinext-portfolio",
    "crates/coinext-data-engine",
    "crates/coinext-exec-engine",
    "crates/coinext-sim",
    "crates/coinext-kernel",
    "crates/coinext-testkit",
    "crates/coinext-py",
    "examples/backtest-sma",
]
# coinext-py is a member but its pyo3 dependency is OPTIONAL and gated behind the `python` feature, so
# the default `cargo test` builds it as an (empty) lib without linking libpython. maturin enables
# the feature: `uvx maturin develop --manifest-path crates/coinext-py/Cargo.toml --features python`.
# The crates below pull heavy network/db deps and are kept out of the default build as stubs.
exclude = [
    "crates/coinext-network",
    "crates/coinext-adapters/binance",
    "crates/coinext-persistence",
    "crates/coinext-ingest",
    "crates/coinext-exec-svc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["Coinext"]

# Single source of dependency versions, inherited by member crates via `.workspace = true`.
[workspace.dependencies]
coinext-core = { path = "crates/coinext-core" }
coinext-model = { path = "crates/coinext-model" }
coinext-ports = { path = "crates/coinext-ports" }
coinext-cache = { path = "crates/coinext-cache" }
coinext-bus = { path = "crates/coinext-bus" }
coinext-indicators = { path = "crates/coinext-indicators" }
coinext-derivatives = { path = "crates/coinext-derivatives" }
coinext-risk-engine = { path = "crates/coinext-risk-engine" }
coinext-portfolio = { path = "crates/coinext-portfolio" }
coinext-data-engine = { path = "crates/coinext-data-engine" }
coinext-exec-engine = { path = "crates/coinext-exec-engine" }
coinext-sim = { path = "crates/coinext-sim" }
coinext-kernel = { path = "crates/coinext-kernel" }
coinext-testkit = { path = "crates/coinext-testkit" }

rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
fnv = "1"
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt"] }

[profile.release]
lto = "thin"
codegen-units = 1
# NOTE: do NOT set `panic = "abort"` here. The maturin --release wheel inherits this profile, and
# under panic=abort a Rust panic inside the PyO3 bridge raises SIGABRT and kills the whole Python
# interpreter instead of surfacing as a catchable Python exception. Keep the default (unwind) so
# pyo3 can translate panics into Python exceptions.
