[package]
name = "coinext-bus"
description = "Coinext message bus: in-process typed Arc payloads (hot path) + Redis Envelope (cross-service)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
coinext-core.workspace = true
coinext-model.workspace = true
coinext-ports.workspace = true
serde.workspace = true
serde_json.workspace = true
