[package]
name = "coinext-cache"
description = "Coinext central in-memory object store (instruments, quotes, marks, orders, positions, account)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
coinext-core.workspace = true
coinext-model.workspace = true
fnv.workspace = true
