[package]
name = "coinext-model"
description = "Coinext domain hub: typed IDs, Instrument, event-sourced Order/Fill/Position, market data."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
coinext-core.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
serde_json.workspace = true
