[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "coinext_py"
version = "0.1.0"
description = "Coinext Rust core exposed to Python (PyO3)"
requires-python = ">=3.13"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
features = ["python"]
module-name = "coinext_py"
