[package]
name = "coinext-risk-engine"
description = "Coinext pre-trade risk gate: position/notional limits + atomic kill-switch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
coinext-core.workspace = true
coinext-model.workspace = true
coinext-cache.workspace = true
coinext-ports.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
