[package]
name = "qv-bus"
description = "VeloxQuant message bus: in-process typed Arc payloads (hot path) + Redis Envelope (cross-service)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qv-core.workspace = true
qv-model.workspace = true
qv-ports.workspace = true
serde.workspace = true
serde_json.workspace = true
