[package]
name = "qv-cache"
description = "VeloxQuant central in-memory object store (instruments, quotes, marks, orders, positions, account)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qv-core.workspace = true
qv-model.workspace = true
fnv.workspace = true
