# qv-exec-svc — the OMS/execution service (service name `exec-svc`).
#
# EXCLUDED from the root cargo workspace (root Cargo.toml `exclude`), so it uses EXPLICIT dependency
# versions — NOT `.workspace = true`. Deliberately minimal so the bin compiles in isolation; the
# real OMS/risk wiring is deferred behind TODO deps below.
[package]
name = "qv-exec-svc"
description = "VeloxQuant OMS/execution service: risk-gated routing + FSM driving + reconciliation. [stub]"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["VeloxQuant"]

[[bin]]
name = "qv-exec-svc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
# TODO(exec-svc): wire the real OMS pipeline when implementing:
#   qv-exec-engine      = { path = "../qv-exec-engine" }        # OMS: risk-gated routing + report folding
#   qv-risk-engine      = { path = "../qv-risk-engine" }        # pre-trade gate + kill-switch
#   qv-adapters-binance = { path = "../qv-adapters/binance" }   # live ExecutionClient
#   qv-persistence      = { path = "../qv-persistence" }        # append-only event store + SeqCursor
#   qv-bus              = { path = "../qv-bus" }                 # Redis Envelope (commands in / reports out)
#   redis, prometheus client, tracing/otel for :9102 metrics + :8081 control
