[package]
name = "qv-kernel"
description = "VeloxQuant kernel: the synchronous deterministic core loop wiring engines + sim + strategy for backtest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qv-core.workspace = true
qv-model.workspace = true
qv-cache.workspace = true
qv-ports.workspace = true
qv-bus.workspace = true
qv-sim.workspace = true
qv-data-engine.workspace = true
qv-exec-engine.workspace = true
qv-risk-engine.workspace = true
qv-portfolio.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
qv-indicators.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
