[package]
name = "qv-model"
description = "VeloxQuant domain hub: typed IDs, Instrument, event-sourced Order/Fill/Position, market data."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qv-core.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
