[package]
name = "qv-portfolio"
description = "VeloxQuant portfolio analytics: balances, realized/unrealized PnL, exposure (mark-sourced from Cache)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qv-core.workspace = true
qv-model.workspace = true
qv-cache.workspace = true
qv-ports.workspace = true
rust_decimal.workspace = true
